戰利品更改版

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1 class="test">自我介紹<br>!!中正會資營炒機好玩!!<br>!!!我終於有能力自己打自介惹!!!</h1>
+    <h1 class="test">自我介紹<br>!!中正資工營炒機好玩!!<br>!!!我終於有能力自己打自介惹!!!</h1>
     <img src="61616687_3294212057270916_3830360836547805184_n.jpg" height="300">
 <p>
     <font size="6" color="brown">就是個易過激<br>語彙力嚴重不足<br>ㄎ一ㄤ頻率超高<br>的人</font><br>
